fix: networks dropdown overflows vouch link modal

--- a/src/components/modals/VouchLinkModal.scss
+++ b/src/components/modals/VouchLinkModal.scss
@@ -1,4 +1,10 @@
 .VouchLinkModal {
+  overflow: visible;
+
+  .Card__body {
+    overflow: visible;
+  }
+
   &__social {
     svg {
       width: 24px;
